Changelog
=========


1.7.2 (unreleased)
------------------

- Nothing changed yet.


1.7.1 (2015-08-20)
------------------

- Add conditional import for Relationvalues since we don't always have z3c.relation.
  [tschanzt]


1.7.0 (2015-08-20)
------------------

- Automatically create relation-values from plone content-types while setting field-values.
  [deiferni]

- Add support for building portlets.
  [mbaechtold]


1.6.3 (2015-05-28)
------------------

- Genericsetup builder: fix error when creating same folder multiple times.
  [jone]


1.6.2 (2015-05-20)
------------------

- Package builder: make package version configurable.
  [jone]


1.6.1 (2015-05-20)
------------------

- Package builder: update pkg_resources working set when loading package.
  [jone]

- Add creation date setter to builder.
  [mbaechtold]


1.6.0 (2014-12-31)
------------------

- Add more default builders:

  - a "zcml" builder for creating ZCML files
  - a "python package" builder for creating python package on the file system
  - a "namespace package" builder, used internally by the "python package" builder
  - a "subpackage" builder for extending a python package with nested packages
  - a "genericsetup profile" builder
  - a "plone upgrade step" builder for building Generic Setup upgrade steps

  [jone]


1.5.2 (2014-12-06)
------------------

- File builder: fix default filename encoding for AT.
  This was a regression in 1.5.0, where filenames were changed to unicode
  because of the consolidation of Archetypes and Dexterity builders.
  [jone]


1.5.1 (2014-12-03)
------------------

- Fix NamedBlobFile import issue for Plone <= 4.2 where blobs are optional.
  [jone]


1.5.0 (2014-12-03)
------------------

- Restore Plone 4.1 compatibility by making any DX imports conditional.
  [lgraf]

- Plone 5 support: default content builders are switched to the dexterity implementation
  by default for Plone >= 5.